--- a/AnalyzeApplyExtend/apply/index.html
+++ b/AnalyzeApplyExtend/apply/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<!-- This website template was created by: Student's First Name Student's Last Name, Current Date -->
+<!-- Student's Name: Shyron Williams
+ Current Date: 4/16/24 --> 
 <html lang="en">
 <head>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,7 +30,7 @@
 
         <!-- Use the main area to add the main content of the webpage -->
         <main>
-					
+
 
             <div id="info">
 							<class="tablet-desktop">
