--- a/AnalyzeApplyExtend/extend/index.html
+++ b/AnalyzeApplyExtend/extend/index.html
@@ -36,7 +36,7 @@ Current Date
                 <h2>Relative</h2>
                 <p>This is an example of an element with a relative position. It can move around a little, depending on the viewport, but it is in a position relative to itself.</p>
                 <!-- Use the empty paragraph element below to identify the values you used for the top and left properties and how it affected the relative box. -->
-                <p>  </p>
+                <p> it places it in a relatively normal position </p>
 
             </div>
 
@@ -54,7 +54,7 @@ Current Date
                 <h2>Absolute</h2>
                 <p>This is an example of an element with an absolute position. It is similar to the fixed position; however, it is positioned relative to the closest parent element.</p>
                 <!-- Use the empty paragraph element below to identify the values you used for the bottom and right properties and how it affected the absolute box. -->
-                <p></p>
+                <p> Places the box above the others and pushes it over to the left even as you scroll up page </p>
 
             </div>
 
